<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">防盗精灵</string>
    <string name="action_settings">Settings</string>
    <string name="back">返回</string>
    <string name="send">发送</string>
    <string name="click_exit">再按一次退出</string>
    <string name="data_requesting">正在请求数据，请稍候...</string>
    <string name="network_error">请求数据失败，请检查网络...</string>
    <string name="network_error2">主人，网络断开了！！！</string>
    <string name="password_error">密码错误</string>
    <string name="checking_series">连续签到%1$s天 +%2$s</string>
    <string name="checking_start">签到成功 +1</string>
    <string name="checking_fail">签到失败，请稍候重试</string>
    <string name="shoutdown_tip">警报提示</string>
    <string name="shoutdown_action">收到关机警报，点击解除</string>
    <string name="use_help">使用帮助</string>
    <string name="agreement">服务协议</string>
    <string name="about_us">关于我们</string>
    <string name="bind_current_device">手机在您手上!</string>

    <!-- 主页 -->
    <string name="home">主页</string>
    <string name="daily_sign">签到</string>
    <string name="home_mobile_monitor">手机找回</string>

    <!-- font icon -->
    <string name="icon_conn">&#xe81a;</string>
    <string name="icon_loading">&#xe801;</string>
    <string name="icon_help">&#xe819;</string>
    <string name="icon_service">&#xe815;</string>
    <string name="icon_version">&#xe815;</string>
    <string name="icon_remember">&#xe816;</string>
    <string name="icon_alarm">&#xe812;</string>
    <string name="icon_setting">&#xe80a;</string>
    <string name="icon_exit">&#xe80c;</string>
    <string name="icon_suggest">&#xe808;</string>
    <string name="icon_secure">&#xe814;</string>
    <string name="icon_location">&#xe817;</string>
    <string name="icon_home">&#xe81b;</string>
    <string name="icon_lefthand">&#xe80e;</string>
    <string name="icon_user">&#xe81c;</string>
    <string name="icon_mobile">&#xe809;</string>

    <!-- left menu -->
    <string name="menu_userinfo">个人中心</string>
    <string name="menu_alarm">警报追踪</string>
    <string name="menu_monitor">定位追踪</string>
    <string name="menu_secure">安全设置</string>
    <string name="menu_command">指令管理</string>
    <string name="menu_sim_change">换卡设置</string>
    <string name="menu_setting">设置</string>
    <string name="menu_suggest">意见反馈</string>
    <string name="menu_score_text">积分：%1$s</string>
    <string name="menu_rank_text">等级：%1$s</string>
    <string name="menu_photo">相机</string>
    <string name="menu_sms">短信操作</string>
    <string name="menu_map">百度地图</string>
    <string name="menu_home">主页</string>
    <string name="menu_setting_title"></string>
    <string name="menu_volume">音量控制</string>
    <string name="menu_logout">安全退出</string>
    <string name="exit_confirm">确定退出？</string>

    <!-- 百度fragment -->
    <string name="by_bus_text">公交</string>
    <string name="by_driver_text">驾车</string>
    <string name="by_walk_text">步行</string>
    <string name="cancel_text">取消</string>
    <string name="maptip">离我约%1$s米</string>
    <string name="maptip_none">正在计算...</string>
    <string name="locate_user">正在获取我的位置...</string>
    <string name="locate_mobile">正在获取手机位置...</string>
    <string name="importance_tip">系统检测到您并没有绑定此手机\n请选择需要操作的功能</string>

    <!-- 意见反馈 -->
    <string name="suggest_hint">请输入您的宝贵意见</string>
    <string name="suggest_empty">亲，说点什么吧！</string>
    <string name="suggest_success">您的意见已经收到，非常感谢</string>
    <string name="suggest_fail">非常抱歉，信息发送失败</string>

    <!-- 登录界面 -->
    <string name="login_title">登录</string>
    <string name="login_register">注册</string>
    <string name="login_forget_pass"><u>忘记密码</u></string>
    <string name="login_username_tip">请输入邮箱地址:example@xx.com</string>
    <string name="login_password_tip">请输入密码</string>
    <string name="empty_username">用户名不能为空</string>
    <string name="empty_password">密码不能为空</string>
    <string name="password_not_equals">两次输入密码不同</string>
    <string name="email_incorrect">请输入正确的邮箱地址</string>
    <string name="login_fail">用户名或密码错误</string>
    <string name="login_request">正在校验，请稍后...</string>
    <string name="login_exchange">切换账号</string>
    <string name="login_forget_pass_tip">用户名或密码错误，忘记密码？</string>
    <string name="login_pass_find">是的，找回密码</string>
    <string name="login_retry">没有，我再试试</string>

    <!-- 注册界面 -->
    <string name="register_repasswrod">确认密码</string>
    <string name="register_email">请输入邮箱地址</string>
    <string name="register_register">马上注册</string>
    <string name="register_tip">正在注册，请稍等...</string>
    <string name="register_user_repeat">该地址已经被注册</string>
    <string name="register_success">注册成功，请登录</string>
    <string name="register_agreement">注册即表示同意《服务协议》</string>

    <!-- 密码重置 -->
    <string name="reset_pass_title">密码重置</string>
    <string name="reset_pass_send">发送</string>
    <string name="email_send_success">邮件发送成功</string>
    <string name="email_send_fail">邮件发送失败，请重试</string>
    <string name="user_not_found">未找到该用户</string>
    <string name="reset_retry_countdown">%1$s秒后重试</string>

    <!-- 系统通知 -->
    <string name="system_tip">系统提示</string>
    <string name="system_tip2">系统提示2222</string>
    <string name="system_bind_device">绑定手机</string>
    <string name="system_monitor_device">追踪手机</string>
    <string name="system_ignore"><![CDATA[ <<跳过>> ]]></string>
    <string name="system_bind_device_success">成功绑定</string>
    <string name="system_bind_device_confirm">绑定此手机会将之前绑定的手机解绑，确定继续？</string>
    <string name="system_btn_ensure">确定</string>
    <string name="system_btn_cancel">取消</string>

    <!-- 绑定界面 -->
    <string name="bind_password">请输入远程密码</string>
    <string name="bind_repassword">请确认远程密码</string>
    <string name="bind_tip_title">远程密码设置</string>
    <string name="bind_btn_content">绑定</string>
    <string name="bind_device_success">绑定成功</string>
    <string name="bind_tip_content">远程密码是绑定手机的重要数据，手机找回时需要。\n如发送短信：\n远程密码#jb，会马上响起手机警报</string>

    <!-- 手机找回弹出按钮 -->
    <string name="monitor_select_list_title">请选择找回方式！</string>

    <!-- 警报追踪 -->
    <string name="alarm_sms_send">短信发送</string>
    <string name="alarm_send">发送警报</string>
    <string name="alarm_cancel">取消警报</string>
    <string name="alarm_sending">正在发送...</string>
    <string name="alarm_pass_cancel">请输入密码解除警报</string>
    <string name="alarm_wait_feedback">发送成功，等待响应%1$ss</string>
    <string name="alarm_ring">主人，警报已响起</string>
    <string name="alarm_count_down">%1$ss</string>
    <string name="alarm_pass_error">远程密码错误，忘记密码了？</string>
    <string name="alarm_no_response">警报启动失败，使用短信强力开启？</string>

    <!-- 地图定位 -->
    <string name="monitor_location_result">%1$s\n误差范围：%2$s（米）</string>
    <string name="monitor_location_error">获取位置失败，请稍后再试</string>
    <string name="monitor_my_location">我的位置</string>
    <string name="monitor_mobile_location">手机位置</string>
    <string name="monitor_distance">距离手机位置约:%1$s米</string>
    <string name="monitor_remote_pass_empty">请输入远程密码</string>
    <string name="monitor_pass_check">正在校验密码，请稍候</string>
    <string name="monitor_menu_user">我的位置</string>
    <string name="monitor_menu_mobile">手机位置</string>
    <string name="monitor_menu_conn">连接手机</string>

    <!-- 个人中心 -->
    <string name="userinfo_refresh_succ">刷新成功</string>
    <string name="userinfo_account">当前账号：%1$s</string>
    <string name="userinfo_point">积\u0020\u0020分：%1$s</string>
    <string name="userinfo_bind_device">绑定手机：%1$s</string>
    <string name="userinfo_unbind_device">绑定手机：无</string>
    <string name="userinfo_logout">退出账号</string>
    <string name="userinfo_remote_pass_query">远程密码查询</string>
    <string name="userinfo_query_confirm">确定使用15积分查询远程密码？</string>
    <string name="userinfo_query_result">请牢记，您的远程密码为：%1$s</string>
    <string name="userinfo_device_unbind">对不起，没有查询到您绑定的手机信息！</string>
    <string name="userinfo_score_less">您的积分不足，记得每天签到赚积分哦！！</string>

    <!-- setting fragment -->
    <string name="setting_miui">小米授权</string>
    <string name="setting_status_bar">状态栏显示</string>
    <string name="setting_shoutdown_alarm">关机警报</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_shoutdown_alarm_open">关机前发出警报</string>
    <string name="setting_shoutdown_alarm_close">长按关机键发出警报，推荐开启</string>
    <string name="setting_sms_alarm_open">发送短信\"远程密码#jb\"响起警报</string>
    <string name="setting_sms_location_open">发送短信\"远程密码#dw\"进行手机定位</string>
    <string name="setting_sms_alarm">短信警报</string>
    <string name="setting_sms_location">短信定位</string>
    <string name="setting_version">当前版本:%1$s</string>
    <string name="setting_help">使用帮助</string>
    <string name="setting_service">服务条款</string>
    <string name="setting_version_max">最新版本</string>
    <string name="setting_version_new">有新版本</string>
    <string name="setting_version_check">检查更新</string>

    <!-- 安全设置 -->
    <string name="secure_desc">为了更好的保护您的手机，请将\"我\"添加到内存清理白名单中</string>
    <string name="secure_app_miui">MIUI(小米/红米)</string>
    <string name="secure_app_baidu">百度手机卫士</string>
    <string name="secure_app_360">360卫士</string>
    <string name="secure_app_tencent"> 腾讯手机管家</string>
    <string name="secure_app_jinshan">金山手机卫士</string>
    <string name="secure_app_liebao">猎豹安全大师</string>
    <string name="secure_app_liebao_master">猎豹清理大师</string>
    <string name="secure_app_setting">点击设置</string>

    <!-- 设置页面 -->
    <string name="setting_"></string>

    <string-array name="monitor_select_list">
        <item>地图定位</item>
        <item>手机警报</item>
    </string-array>
    <string-array name="left_menus_icon">
        <item>&#xe805;</item>
        <item>&#xe805;</item>
        <item>&#xe805;</item>
        <item>&#xe805;</item>
        <item>&#xe805;</item>
    </string-array>
    <string-array name="left_menus">
        <item>相机</item>
        <item>短信操作</item>
        <item>百度地图</item>
        <item>主页</item>
        <item>音量控制</item>
    </string-array>

</resources>