<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/importance_tip" />

    <Button
        android:id="@+id/btn_bind_device"
        style="@style/buttonStyle"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@android:color/holo_orange_light"
        android:text="@string/system_bind_device" />

    <Button
        android:id="@+id/btn_monitor_device"
        style="@style/buttonStyle"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@android:color/holo_orange_light"
        android:text="@string/system_monitor_device" />

    <Button
        style="@style/buttonStyle"
        android:layout_marginBottom="@dimen/default_margin"
        android:id="@+id/btn_ignore"
        android:background="@android:color/darker_gray"
        android:text="@string/system_ignore" />

</LinearLayout>