<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:menu="http://schemas.android.com/apk/res/cn.com.cml.dbl"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher" />

        <View style="@style/horizontalDivider" />

        <!-- 闹钟设置 -->

        <cn.com.cml.dbl.ui.MenuItemView_
            android:id="@+id/menu_alarm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            menu:icon="@string/icon_spin5"
            menu:text="@string/menu_alarm" >
        </cn.com.cml.dbl.ui.MenuItemView_>

        <View style="@style/horizontalDivider" />
        <!-- 定位查询 -->

        <cn.com.cml.dbl.ui.MenuItemView_
            android:id="@+id/menu_monitor"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            menu:icon="@string/icon_spin5"
            menu:text="@string/menu_monitor" >
        </cn.com.cml.dbl.ui.MenuItemView_>

        <View style="@style/horizontalDivider" />

        <!-- 指令配置 -->

        <cn.com.cml.dbl.ui.MenuItemView_
            android:id="@+id/menu_command"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            menu:icon="@string/icon_spin5"
            menu:text="@string/menu_command" >
        </cn.com.cml.dbl.ui.MenuItemView_>

        <View style="@style/horizontalDivider" />

        <!-- 换卡设置 -->

        <cn.com.cml.dbl.ui.MenuItemView_
            android:id="@+id/menu_sim_change"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            menu:icon="@string/icon_spin5"
            menu:text="@string/menu_sim_change" >
        </cn.com.cml.dbl.ui.MenuItemView_>

        <View style="@style/horizontalDivider" />

        <cn.com.cml.dbl.ui.MenuItemView_
            android:id="@+id/menu_etc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            menu:icon="@string/icon_spin5"
            menu:text="@string/menu_etc" >
        </cn.com.cml.dbl.ui.MenuItemView_>

        <View style="@style/horizontalDivider" />

        <cn.com.cml.dbl.ui.MenuItemView_
            android:id="@+id/menu_suggest"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            menu:icon="@string/icon_spin5"
            menu:text="@string/menu_suggest" >
        </cn.com.cml.dbl.ui.MenuItemView_>

        <View style="@style/horizontalDivider" />

        <cn.com.cml.dbl.ui.MenuItemView_
            android:id="@+id/menu_home"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            menu:icon="@string/icon_spin5"
            menu:text="@string/menu_home" >
        </cn.com.cml.dbl.ui.MenuItemView_>

        <View style="@style/horizontalDivider" />

        <cn.com.cml.dbl.ui.MenuItemView_
            android:id="@+id/menu_photo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            menu:icon="@string/icon_spin5"
            menu:text="@string/menu_photo" >
        </cn.com.cml.dbl.ui.MenuItemView_>

        <View style="@style/horizontalDivider" />

        <cn.com.cml.dbl.ui.MenuItemView_
            android:id="@+id/menu_map"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            menu:icon="@string/icon_spin5"
            menu:text="@string/menu_map" >
        </cn.com.cml.dbl.ui.MenuItemView_>

        <View style="@style/horizontalDivider" />

        <cn.com.cml.dbl.ui.MenuItemView_
            android:id="@+id/menu_sms"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            menu:icon="@string/icon_spin5"
            menu:text="@string/menu_sms" >
        </cn.com.cml.dbl.ui.MenuItemView_>

        <View style="@style/horizontalDivider" />

        <cn.com.cml.dbl.ui.MenuItemView_
            android:id="@+id/menu_volume"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            menu:icon="@string/icon_spin5"
            menu:text="@string/menu_volume" >
        </cn.com.cml.dbl.ui.MenuItemView_>

        <View style="@style/horizontalDivider" />

        <cn.com.cml.dbl.ui.FontIconTextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="1334" />
    </LinearLayout>

</ScrollView>