<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_margin" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bind_tip_content" />

    <EditText
        android:id="@+id/input_bind_pass"
        style="@style/editStyle"
        android:hint="@string/bind_password"
        android:inputType="textPassword"
        android:maxLength="6" />

    <EditText
        android:id="@+id/input_bind_repass"
        style="@style/editStyle"
        android:hint="@string/bind_repassword"
        android:inputType="textPassword"
        android:maxLength="6" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="bottom" >

        <Button
            android:id="@+id/btn_bind"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/default_color"
            android:gravity="center"
            android:text="@string/bind_btn_content"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>