<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@android:color/holo_blue_light" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/launcher" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/input_username"
            style="@style/editStyle"
            android:hint="@string/login_username_tip"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/input_password"
            style="@style/editStyle"
            android:hint="@string/login_password_tip"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/input_repassword"
            style="@style/editStyle"
            android:hint="@string/register_repasswrod"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@android:color/holo_blue_light"
            android:gravity="center"
            android:text="@string/register_register"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>